[#168133214] Client side API for subscriptions feed (#12)
