# openapi/index.yaml
@@ -229,7 +229,71 @@ paths:
           description: Too many requests
       parameters:
       - $ref: "#/parameters/FiscalCode"
+  "/subscriptions-feed/{date}":
+    get:
+      operationId: getSubscriptionsFeedForDate
+      summary: Get your service subscriptions feed for a date
+      description:  |-
+        Returns the hashed fiscal codes of users that subscribed to or
+        unsubscribed from your service on the provided date (UTC). By querying
+        this feed on each day, you can know what users you can or cannot send
+        messages to without having to query `getProfile` for each message.
+        This is an optimization for services that send hi volumes of
+        messages per day to avoid having to make two API calls for each message.
+      responses:
+        '200':
+          description: Found.
+          schema:
+            $ref: "#/definitions/SubscriptionsFeed"
+          examples:
+            application/json:
+              dateUTC: "2019-09-03"
+              subscriptions: [ "e3b0c44298fc1c149afbf4c8996fb92427ae41e4649b934ca495991b7852b855" ]
+              ubsubscriptions: [ ]
+        '401':
+          description: Unauthorized
+        '404':
+          description: Subscriptions feed not available yet.
+          schema:
+            $ref: "#/definitions/ProblemJson"
+        '429':
+          description: Too many requests
+      parameters:
+      - $ref: "#/parameters/DateUTC"
 definitions:
+  SubscriptionsFeed:
+    type: object
+    properties:
+      dateUTC:
+        $ref: "#/definitions/DateUTC"
+      subscriptions:
+        $ref: "#/definitions/SubscriptionsList"
+      unsubscriptions:
+        $ref: "#/definitions/SubscriptionsList"
+    required:
+      - dateUTC
+      - subscriptions
+      - unsubscriptions
+  SubscriptionsList:
+    type: array
+    items:
+      $ref: "#/definitions/FiscalCodeHash"
+  FiscalCodeHash:
+    type: string
+    maxLength: 16
+    minLength: 16
+    description: |-
+      To avoid sharing the citizens fiscal codes, the API will
+      provide the hex encoding of the SHA256 hash of the upper case fiscal code.
+    pattern: "[0-9a-f]{64}"
+    x-example: e3b0c44298fc1c149afbf4c8996fb92427ae41e4649b934ca495991b7852b855
+  DateUTC:
+    type: string
+    maxLength: 10
+    minLength: 10
+    description: A date in the format YYYY-MM-DD.
+    pattern: "[0-9]{4}-[0-9]{2}-[0-9]{2}"
+    x-example: 2019-09-15
   ProblemJson:
     $ref: "https://raw.githubusercontent.com/teamdigitale/io-functions-commons/master/openapi/definitions.yaml#/ProblemJson"
   NotificationChannelStatusValue:
@@ -260,6 +324,16 @@ parameters:
     description: The fiscal code of the user, all upper case.
     pattern: "[A-Z]{6}[0-9LMNPQRSTUV]{2}[ABCDEHLMPRST][0-9LMNPQRSTUV]{2}[A-Z][0-9LMNPQRSTUV]{3}[A-Z]"
     x-example: SPNDNL80R13C555X
+  DateUTC:
+    name: date
+    in: path
+    type: string
+    maxLength: 10
+    minLength: 10
+    required: true
+    description: A date in the format YYYY-MM-DD.
+    pattern: "[0-9]{4}-[0-9]{2}-[0-9]{2}"
+    x-example: 2019-09-15
 consumes:
 - application/json
 produces:
